--- a/notebooks/traitement_source.ipynb
+++ b/notebooks/traitement_source.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "\n",
     "# Dates de diponibilité des fichiers\n",
     "START_DATE = date(2020, 1, 22)\n",
-    "END_DATE = date(2020, 3, 5)\n",
+    "END_DATE = date(2020, 3, 13)\n",
     "\n",
     "#Répertoire de sauvegarde des fichiers bruts\n",
     "RAWFILES_DIR = '../data/raw/'\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,16 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(180, 4)"
+       "(523, 4)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(177, 4)"
+       "(426, 4)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,62 +206,105 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>63</th>\n",
+       "      <th>2</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Croatia</td>\n",
-       "      <td>45.1000</td>\n",
-       "      <td>15.2000</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>12.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>80</th>\n",
+       "      <th>8</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Romania</td>\n",
-       "      <td>45.9432</td>\n",
-       "      <td>24.9668</td>\n",
+       "      <td>Iran</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>53.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>103</th>\n",
+       "      <th>20</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Luxembourg</td>\n",
-       "      <td>49.8153</td>\n",
-       "      <td>6.1296</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>138.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69</th>\n",
+       "      <th>29</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Croatia</td>\n",
-       "      <td>45.1667</td>\n",
-       "      <td>15.5000</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>9.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86</th>\n",
+       "      <th>31</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Romania</td>\n",
-       "      <td>46.0000</td>\n",
-       "      <td>25.0000</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>1.283300</td>\n",
+       "      <td>103.833300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>119</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>US</td>\n",
+       "      <td>47.400902</td>\n",
+       "      <td>-121.490494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38.491226</td>\n",
+       "      <td>-80.954453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>US</td>\n",
+       "      <td>44.268543</td>\n",
+       "      <td>-89.616508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>US</td>\n",
+       "      <td>42.755966</td>\n",
+       "      <td>-107.302490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Luxembourg</td>\n",
-       "      <td>49.8144</td>\n",
-       "      <td>6.1317</td>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>14.058300</td>\n",
+       "      <td>108.277200</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>194 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Province/State Country/Region  Latitude  Longitude\n",
-       "63             NaN        Croatia   45.1000    15.2000\n",
-       "80             NaN        Romania   45.9432    24.9668\n",
-       "103            NaN     Luxembourg   49.8153     6.1296\n",
-       "69             NaN        Croatia   45.1667    15.5000\n",
-       "86             NaN        Romania   46.0000    25.0000\n",
-       "119            NaN     Luxembourg   49.8144     6.1317"
+       "    Province/State Country/Region   Latitude   Longitude\n",
+       "2              NaN          Italy  43.000000   12.000000\n",
+       "8              NaN           Iran  32.000000   53.000000\n",
+       "20             NaN          Japan  36.000000  138.000000\n",
+       "29             NaN        Germany  51.000000    9.000000\n",
+       "31             NaN      Singapore   1.283300  103.833300\n",
+       "..             ...            ...        ...         ...\n",
+       "218     Washington             US  47.400902 -121.490494\n",
+       "219  West Virginia             US  38.491226  -80.954453\n",
+       "220      Wisconsin             US  44.268543  -89.616508\n",
+       "221        Wyoming             US  42.755966 -107.302490\n",
+       "222            NaN        Vietnam  14.058300  108.277200\n",
+       "\n",
+       "[194 rows x 4 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
