Update for final project

--- a/notebooks/traitement_source.ipynb
+++ b/notebooks/traitement_source.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "# Dates de diponibilité des fichiers\n",
     "START_DATE = date(2020, 1, 22)\n",
-    "END_DATE = date(2020, 3, 13)\n",
+    "END_DATE = date(2020, 3, 27)\n",
     "\n",
     "#Répertoire de sauvegarde des fichiers bruts\n",
     "RAWFILES_DIR = '../data/raw/'\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,32 +57,54 @@
     "    day = START_DATE + timedelta(days=i)\n",
     "    day_label = day.strftime(\"%m-%d-%Y\")\n",
     "    \n",
-    "    virus_df = pd.read_csv(BASE_URL.format(day_label), sep=\",\", parse_dates=[\"Last Update\"])\n",
-    "    virus_df.to_csv(os.path.join(RAWFILES_DIR, day_label + '.csv'), index=False)\n",
     "    \n",
+    "    #virus_df = pd.read_csv(BASE_URL.format(day_label), sep=\",\", parse_dates=[\"Last Update\"])\n",
+    "    \n",
+    "    virus_df = pd.read_csv(BASE_URL.format(day_label), sep=',')\n",
+    "    \n",
+    "    # Files from 22 March have new column names\n",
+    "    if ('FIPS' in virus_df.columns):\n",
+    "        virus_df = pd.read_csv(BASE_URL.format(day_label), sep=',', parse_dates=['Last_Update'])\n",
+    "        virus_df.columns = ['FIPS', 'Admin2', 'Province/State', 'Country/Region', 'Last Update', 'Latitude', \n",
+    "                            'Longitude', 'Confirmed', 'Deaths', 'Recovered', 'Active', 'Combined_Key']\n",
+    "    else:\n",
+    "        virus_df = pd.read_csv(BASE_URL.format(day_label), sep=',', parse_dates=['Last Update'])\n",
+    "    \n",
+    "    # In new files, Mainland China is now China \n",
+    "    virus_df['Country/Region'] = virus_df['Country/Region'].replace('Mainland China', 'China')\n",
+    "    \n",
+    "    # In data 3 ways of writting for South Korea\n",
+    "    virus_df['Country/Region'] = virus_df['Country/Region'].replace('Korea, South', 'South Korea')\n",
+    "    virus_df['Country/Region'] = virus_df['Country/Region'].replace('Republic of Korea', 'South Korea')\n",
+    "\n",
+    "    virus_df.to_csv(os.path.join(RAWFILES_DIR, day_label + '.csv'), index=False)\n",
     "    #print(day_label)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "FIPS                     float64\n",
+       "Admin2                    object\n",
        "Province/State            object\n",
        "Country/Region            object\n",
        "Last Update       datetime64[ns]\n",
+       "Latitude                 float64\n",
+       "Longitude                float64\n",
        "Confirmed                  int64\n",
        "Deaths                     int64\n",
        "Recovered                  int64\n",
-       "Latitude                 float64\n",
-       "Longitude                float64\n",
+       "Active                     int64\n",
+       "Combined_Key              object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +140,8 @@
     "\n",
     "# Table de référence pour les lat / long\n",
     "(all_df[[\"Province/State\", \"Country/Region\", \"Latitude\", \"Longitude\"]]\n",
+    " # Delete where Latitude = 0 and Longitude = 0 for US and Canada\n",
+    " .query('Latitude != 0 & Longitude != 0')\n",
     " .drop_duplicates(subset=[\"Province/State\", \"Country/Region\"])\n",
     " .sort_values(by=[\"Country/Region\", \"Province/State\"])\n",
     " .to_csv(os.path.join(PROCESSED_DIR, \"lat_long_table.csv\"), index=False)\n",
@@ -126,55 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(523, 4)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(all_df[[\"Province/State\", \"Country/Region\", \"Latitude\", \"Longitude\"]]\n",
-    " .drop_duplicates()\n",
-    " .shape\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(426, 4)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(all_df[[\"Province/State\", \"Country/Region\", \"Latitude\", \"Longitude\"]]\n",
-    " .drop_duplicates()\n",
-    " .drop_duplicates(subset=[\"Province/State\", \"Country/Region\"])\n",
-    " .shape\n",
-    ")\n",
-    "# 3 villes qui ont des latitudes-longitudes différentes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -206,39 +182,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>36.000</td>\n",
+       "      <td>128.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>NaN</td>\n",
        "      <td>Italy</td>\n",
-       "      <td>43.000000</td>\n",
-       "      <td>12.000000</td>\n",
+       "      <td>43.000</td>\n",
+       "      <td>12.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Henan</td>\n",
+       "      <td>China</td>\n",
+       "      <td>33.882</td>\n",
+       "      <td>113.6140</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>NaN</td>\n",
        "      <td>Iran</td>\n",
-       "      <td>32.000000</td>\n",
-       "      <td>53.000000</td>\n",
+       "      <td>32.000</td>\n",
+       "      <td>53.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Japan</td>\n",
-       "      <td>36.000000</td>\n",
-       "      <td>138.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>51.000000</td>\n",
-       "      <td>9.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Singapore</td>\n",
-       "      <td>1.283300</td>\n",
-       "      <td>103.833300</td>\n",
+       "      <th>15</th>\n",
+       "      <td>Heilongjiang</td>\n",
+       "      <td>China</td>\n",
+       "      <td>47.862</td>\n",
+       "      <td>127.7615</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -248,63 +224,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>218</th>\n",
-       "      <td>Washington</td>\n",
+       "      <th>2858</th>\n",
+       "      <td>California</td>\n",
        "      <td>US</td>\n",
-       "      <td>47.400902</td>\n",
-       "      <td>-121.490494</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>219</th>\n",
-       "      <td>West Virginia</td>\n",
+       "      <th>2860</th>\n",
+       "      <td>Delaware</td>\n",
        "      <td>US</td>\n",
-       "      <td>38.491226</td>\n",
-       "      <td>-80.954453</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>220</th>\n",
+       "      <th>2866</th>\n",
+       "      <td>Maryland</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2870</th>\n",
+       "      <td>Nebraska</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2879</th>\n",
        "      <td>Wisconsin</td>\n",
        "      <td>US</td>\n",
-       "      <td>44.268543</td>\n",
-       "      <td>-89.616508</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>221</th>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>US</td>\n",
-       "      <td>42.755966</td>\n",
-       "      <td>-107.302490</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>222</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Vietnam</td>\n",
-       "      <td>14.058300</td>\n",
-       "      <td>108.277200</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>194 rows × 4 columns</p>\n",
+       "<p>3821 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Province/State Country/Region   Latitude   Longitude\n",
-       "2              NaN          Italy  43.000000   12.000000\n",
-       "8              NaN           Iran  32.000000   53.000000\n",
-       "20             NaN          Japan  36.000000  138.000000\n",
-       "29             NaN        Germany  51.000000    9.000000\n",
-       "31             NaN      Singapore   1.283300  103.833300\n",
-       "..             ...            ...        ...         ...\n",
-       "218     Washington             US  47.400902 -121.490494\n",
-       "219  West Virginia             US  38.491226  -80.954453\n",
-       "220      Wisconsin             US  44.268543  -89.616508\n",
-       "221        Wyoming             US  42.755966 -107.302490\n",
-       "222            NaN        Vietnam  14.058300  108.277200\n",
+       "     Province/State Country/Region  Latitude  Longitude\n",
+       "1               NaN    South Korea    36.000   128.0000\n",
+       "2               NaN          Italy    43.000    12.0000\n",
+       "4             Henan          China    33.882   113.6140\n",
+       "8               NaN           Iran    32.000    53.0000\n",
+       "15     Heilongjiang          China    47.862   127.7615\n",
+       "...             ...            ...       ...        ...\n",
+       "2858     California             US     0.000     0.0000\n",
+       "2860       Delaware             US     0.000     0.0000\n",
+       "2866       Maryland             US     0.000     0.0000\n",
+       "2870       Nebraska             US     0.000     0.0000\n",
+       "2879      Wisconsin             US     0.000     0.0000\n",
        "\n",
-       "[194 rows x 4 columns]"
+       "[3821 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,5 +374,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
